# git-why

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
completions/: git-why.bash  git-why.fish  git-why.zsh
git_why/: cache.py  cli.py  diff_analyzer.py  display.py  git_analyzer.py  linker.py
git_why/ai/: __init__.py  base.py  claude.py  defaults.py  gemini.py  offline.py  ollama.py  openai_provider.py  openrouter.py  prompt.py  router.py
tests/: test_cli_parse.py  test_diff_analyzer.py  test_git_analyzer.py  test_linker.py  test_offline.py  test_provider_router.py
