[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-why"
version = "0.1.0"
description = "git blame tells you who. git-why tells you why — explains code from local git history, offline or with AI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "git-why contributors" },
]
keywords = ["git", "cli", "blame", "history", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.30.0",
]
openai = [
    "openai>=1.0.0",
]
gemini = [
    "google-genai>=0.3.0",
]
all = [
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "google-genai>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
git-why = "git_why.cli:main"

[project.urls]
Homepage = "https://github.com/Sameer988/git-why"
Repository = "https://github.com/Sameer988/git-why"
Issues = "https://github.com/Sameer988/git-why/issues"

[tool.setuptools.packages.find]
include = ["git_why*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
